# TPI_Algo1

./: CMakeLists.txt  README.md  definiciones.h  es.cpp  es.h  juegoDeLaVida.cpp  maxiopt.cpp  maxiopt.h  solucion.cpp  solucion.h  toroide40x50.tor
lib/googletest-master/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/googletest-master/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/googletest-master/googlemock/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tests/: densidadPoblacionTEST.cpp  enCrecimientoTEST.cpp  esPeriodicoTEST.cpp  esValidoTEST.cpp  evolucionDePosicionTEST.cpp  evolucionMultipleTEST.cpp  evolucionToroideTEST.cpp  fusionarTEST.cpp  posicionesVivasTEST.cpp  primosLejanosTEST.cpp  seleccionNaturalTEST.cpp  vistaTrasladadaTEST.cpp
